# ncnn_app

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/tencent/com/ncnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/squeezencnn/: MainActivity.java
app/src/test/java/tencent/com/ncnn/: ExampleUnitTest.java
